<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".NuevoPrestamoActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libro_titulo_hint"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium"
        >
    </TextView>

    <AutoCompleteTextView
        android:id="@+id/txtLibroTituloAutocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="20"
        android:textAppearance="?android:attr/textAppearanceMedium" >
        <requestFocus />
    </AutoCompleteTextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_txtContacto"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium"
        >
    </TextView>

    <LinearLayout
        android:id="@+id/linContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:orientation="horizontal"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/imgContactoAPrestar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textAlignment="viewEnd"
            android:onClick="buscarContacto"
            android:src="@drawable/ic_action_search" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnPrestar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="prestar"
        android:text="@string/action_prestar" />

</LinearLayout>